script.js rough draft

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="city-search" id="city-search">
             <h2 class="search-header">Search for a City:</h2>
             <input class="city-form" type="text" id="city" placeholder="City Name">
-            <button class="btn-auto" id="search">Search</button>
+            <button type="button" class="btn-auto" id="search">Search</button>
         </div>
         <div id="searched"></div>
     </div>
