--- a/index.html
+++ b/index.html
@@ -5,27 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css"/>
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Weather Dashboard</title>
 </head>
 <body>
     <header class="header">
-        <h1 class="auto">Weather Dashboard</h1>
+        <h1 id="theme">Weather Dashboard</h1>
     </header>
-    <div id="column-one">
-        <div class="city-search" id="city-search">
-            <h2 class="search-header">Search for a City:</h2>
-            <input class="city-form" type="text" id="city" placeholder="City Name">
-            <button type="button" class="btn-auto" id="search">Search</button>
+    <div id="columns">
+        <div id="column-one">
+            <div class="city-search" id="city-search">
+                <h2 class="search-header mt-3">Search for a City:</h2>
+                <input class="city-form" type="text" id="city" placeholder="City Name">
+                <button type="button" class="btn text-center" id="search">Search</button>
+            </div>
+            <div class="col-12 my-3" id="searched"></div>
         </div>
-        <div id="searched"></div>
+        <div id="column-two">
+            <div class="my-3 mx-2" id="day-zero"></div>
+            <div id="weather-cards"></div>
+        </div>
     </div>
-    <div id="column-two">
-        <div id="day-zero"></div>
-        <div id="weather-cards"></div>
-    </div>
+    
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
 </body>
